updated final report

--- a/paper/report.bib
+++ b/paper/report.bib
@@ -1,29 +1,83 @@
 @article{Bai:12,
-  author = {W. Bainbridge},
-  title = {The scientific research potential of virtual worlds},
-  journal = {Science},
-  year = 2012,
-  volume = 317,
-  issue = 5837,
-  pages = {472--476}
+  author        = {Williams S. Bainbridge},
+  title         = {The scientific research potential of virtual worlds},
+  journal       = {Science},
+  year          = 2012,
+  volume        = 317,
+  issue         = 5837,
+  pages         = {472--476}
+}
+
+@article{HA:08,
+  author        = {K. Hellerstedt and H. E. Aldrich},
+  title         = {The impact of initial team composition and performance on team dynamics and survival},
+  journal       = {Academy of Management},
+  year          = 2008,
+  issue         = 1984,
+  pages         = {6}
+}
+
+@article{Spo:11,
+  author        = {Harlan E. Spotts},
+  title         = {Evaluating the effects of team composition and performance environment on team performance},
+  journal       = {Journal of Behavioral and Applied Management},
+  year          = 2011
 }
 
 @article{Dic:05,
-  author = {M. Dickey},
-  title = {Three dimensional virtual worlds and distance learning: Two case studies of Active Worlds as a medium for distance education},
-  journal = {British Journal of Educational Tehnology},
-  year = 2005,
-  volume = 36,
-  issue = 3,
-  pages = {439--451}
+  author        = {Michele D. Dickey},
+  title         = {Three dimensional virtual worlds and distance learning: Two case studies of Active Worlds as a medium for distance education},
+  journal       = {British Journal of Educational Technology},
+  year          = 2005,
+  volume        = 36,
+  issue         = 3,
+  pages         = {439--451}
 }
 
-@article{Bai:12,
-  author = {W. Bainbridge},
-  title = {The scientific research potential of virtual worlds},
-  journal = {Science},
-  year = 2012,
-  volume = 317,
-  issue = 5837,
-  pages = {472--476}
+@article{Tas:14,
+  author        = {Paul Tassi},
+  title         = {Riot's `{League of Legends}' reveals astonishing 27 million daily players, 67 million monthly},
+  journal       = {Forbes},
+  year          = 2014
+}
+
+@inproceedings{TSF:13,
+  author        = {Emmett Tomai and Rosendo Salazar and Roberto Flores},
+  title         = {Simulating aggregate player behavior with learning behavior trees},
+  crossref =    {KRA:13},
+  year          = 2013
+}
+
+@proceedings{KRA:13,
+  editor        = {William G. Kennedy and David Reitter and R. St. Amant},
+  title         = {Proceedings of the 22nd Annual Conference on Behavior Representation in Modeling and Simulation},
+  booktitle     = {Proceedings of the 22nd Annual Conference on Behavior Representation in Modeling and Simulation},
+  publisher     = {BRIMS Society},
+  venue         = {Ottawa, Canada},
+  month         = jul,
+  year          = {2013}
+}
+
+@inproceedings{KJ:12,
+  author        = {Brian Kulis and Michael I. Jordan},
+  title         = {Revisiting k-means: New algorithms via Bayesian nonparametrics},
+  crossref      = {ICML:12},
+  year          = 2012
+}
+
+@proceedings{ICML:12,
+  editor        = {John Langford and Joelle Pineau},
+  title         = {Proceedings of the 29th International Conference on Machine Learning},
+  booktitle     = {Proceedings of the 29th International Conference on Machine Learning},
+  publisher     = {Omnipress},
+  venue         = {Edinburgh, Scotland},
+  month         = jun,
+  year          = {2012}
+}
+
+@Misc{Rio:14,
+  author        = {{Riot Games, Inc.}},
+  title         = {{Riot Games API}},
+  url           = {https://developer.riotgames.com/},
+  year          = 2014
 }
