--- a/paper/report.bib
+++ b/paper/report.bib
@@ -1,3 +1,27 @@
+@inproceedings{TKJ:13,
+  author        = {Tamar Broderick and Brian Kulis and Michal I. Jordan},
+  title         = {{MAD-Bayes: MAP-based asymptotic derivations from Bayes}},
+  crossref      = {ICML:13},
+  year          = 2013
+}
+
+@proceedings{ICML:13,
+  editor        = {Sanjoy Dasgupta and David McAllester},
+  title         = {Proceedings of the 30th International Conference on Machine Learning},
+  booktitle     = {Proceedings of the 30th International Conference on Machine Learning},
+  publisher     = {Omnipress},
+  venue         = {Georgia, USA},
+  month         = jun,
+  year          = {2013}
+}
+
+@misc{Ng:14,
+  author        = {Andrew Ng},
+  title         = {CS 229: Machine learning course notes},
+  url           = {http://cs229.stanford.edu/materials.html},
+  year          = 2014
+}
+
 @article{Bai:12,
   author        = {Williams S. Bainbridge},
   title         = {The scientific research potential of virtual worlds},
@@ -44,7 +68,7 @@
 @inproceedings{TSF:13,
   author        = {Emmett Tomai and Rosendo Salazar and Roberto Flores},
   title         = {Simulating aggregate player behavior with learning behavior trees},
-  crossref =    {KRA:13},
+  crossref      = {KRA:13},
   year          = 2013
 }
 
@@ -75,7 +99,7 @@
   year          = {2012}
 }
 
-@Misc{Rio:14,
+@misc{Rio:14,
   author        = {{Riot Games, Inc.}},
   title         = {{Riot Games API}},
   url           = {https://developer.riotgames.com/},
