--- a/paper/report.bib
+++ b/paper/report.bib
@@ -41,6 +41,14 @@
   pages         = {6}
 }
 
+@article{Suz:09,
+  author        = {Suzie Ford},
+  title         = {{League of Legends: Marc Merrill Q\&A}},
+  journal       = {Warcry Network},
+  year          = 2009,
+  url           = {http://www.warcry.com/articles/view/interviews/5686-League-of-Legends-Marc-Merrill-Q-A}
+}
+
 @article{Spo:11,
   author        = {Harlan E. Spotts},
   title         = {Evaluating the effects of team composition and performance environment on team performance},
